corrected the error in html file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-#myText {
+#myDiv {
   width: 100%;
   padding: 50px 0;
   text-align: center;
-  background-color: yellow;
+  background-color: pink;
   margin-top: 20px;
   display: none;
 }
@@ -20,11 +20,11 @@
 
 <p>Click the buttons to toggle between hiding and showing the Text elements:</p>
 
-<button onclick="showDiv('myText')">Show Text</button>
-<button onclick="hideDiv('myText')">Hide Text</button>
+<button onclick="showDiv('myDiv')">Show Text</button>
+<button onclick="hideDiv('myDiv')">Hide Text</button>
 
-<dive id="myText">
-Welcome to the CircleCI Technical Challenge!
+<dive id="myDiv">
+Welcome to CircleCI Technical Challenge!
 </div>
 
 <br>
