--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 50px 0;
   text-align: center;
-  background-color: pink;
+  background-color: yellow;
   margin-top: 20px;
   display: none;
 }
