--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<p>Click the buttons to toggle between hiding and showing the Text elements:</p>
+<p>Click on the buttons to toggle between hiding and showing the Text elements:</p>
 
 <button onclick="showDiv('myDiv')">Show Text</button>
 <button onclick="hideDiv('myDiv')">Hide Text</button>
